force-app/main/default/objects/Action_Audit__c/Action_Audit__c.object-meta.xml
<CustomObject>
    <label>Action Audit</label>
    <nameField>
        <displayFormat>AUD-{0000000}</displayFormat>
        <label>Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>