force-app/main/default/objects/Action_Audit__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledge</fullName>
            </value>
            <value>
                <fullName>Dismiss</fullName>
            </value>
            <value>
                <fullName>Remediate</fullName>
            </value>
            <value>
                <fullName>RevokeToken</fullName>
            </value>
            <value>
                <fullName>KillSession</fullName>
            </value>
            <value>
                <fullName>BlockApp</fullName>
            </value>
            <value>
                <fullName>FreezeUser</fullName>
            </value>
            <value>
                <fullName>ForceReset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>