force-app/main/default/objects/Action_Audit__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <label>Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Action Audits (Actor)</relationshipLabel>
    <relationshipName>Action_Audits_Actor</relationshipName>
    <type>Lookup</type>
</CustomField>