force-app/main/default/objects/Action_Audit__c/fields/Finding__c.field-meta.xml
<CustomField>
    <fullName>Finding__c</fullName>
    <label>Finding</label>
    <referenceTo>Security_Finding__c</referenceTo>
    <relationshipLabel>Action Audits</relationshipLabel>
    <relationshipName>Action_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>