force-app/main/default/objects/Action_Audit__c/fields/Parameters_Json__c.field-meta.xml
<CustomField>
    <fullName>Parameters_Json__c</fullName>
    <label>Parameters JSON</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>