force-app/main/default/objects/Action_Audit__c/fields/Target_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Id__c</fullName>
    <label>Target ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>